# OpenViking

examples/memex/: pyproject.toml
openviking/models/embedder/: __init__.py  ollama_embedders.py
openviking/models/vlm/: registry.py
openviking_cli/utils/config/: embedding_config.py
