[project]
name = "memex"
version = "0.1.0"
description = "Personal Knowledge Assistant powered by OpenViking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openviking>=0.1.6",
    "prompt-toolkit>=3.0.52",
    "rich>=13.0.0",
    "openai>=1.0.0",
]

[project.scripts]
memex = "cli:main"
